@@ -10,6 +10,7 @@ import net.minecraftforge.fml.loading.FMLPaths;
 import java.io.FileReader;
 import java.io.IOException;
 import java.lang.reflect.Modifier;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -92,7 +93,7 @@ public class SSPBGameOptions {
             throw new IOException("Not a directory: " + dir);
         }
 
-        Files.writeString(this.configPath, GSON.toJson(this));
+        Files.write(this.configPath, GSON.toJson(this).getBytes(StandardCharsets.UTF_8));
     }
 
 }
